fix(checkbox, radio): inline and compact wrapping (#1770)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [ ] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -90,7 +90,7 @@
   }
 
   .clr-control-inline {
-    @include forms-mixins.form-inline-input();
+    @include forms-mixins.form-inline-input(true);
   }
 
   .clr-subtext {
